--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,60 @@
-/.project
+bin/
+/target
+/local
+
+# Eclipse, Netbeans and IntelliJ files
+.*
+!.env
+!.gitignore
+!.ci
+!.github
+nbproject
+target
+/*.ipr
+/*.iws
+*.iml
+
+# Repository wide ignore mac DS_Store files
+.DS_Store
+
+# Original jbpm ignores
+*~
+
+# Test info
+/settings*.xml
+/lib-jdbc/
+*.db
+*.tlog
+*.log*
+
+# modules that don't exist in this branch
+/jbpm-human-task-war/
+/jbpm-bam/
+/jbpm-gwt/
+
+# files used for external db testing
+jdbc_driver.jar
+db-settings.xml
+quarkus.log
+
+# XTF properties files
+test.properties
+*~
+/settings*.xml
+*.db
+*.tlog
+
+workspace
+
+#Scripts
+data-index-service*.jar
+management-console*.jar
+kogito-travel-agency/extended/scripts/persistence/
+
+#Grafana generated dashboards
+**/docker-compose/grafana/provisioning/dashboards/*.json
+/kogito-quarkus-examples/ocp-tryout/uninstallLogs.txt
+/kogito-quarkus-examples/ocp-tryout/installLogs.txt
+/kogito-quarkus-examples/ocp-tryout/keycloak/kogito-realm.json
+
+**/docker-compose/.env
