--- a/workflow/src/main/resources/application.properties
+++ b/workflow/src/main/resources/application.properties
@@ -2,3 +2,7 @@
 # quarkus.package.type=fast-jar
 quarkus.native.native-image-xmx=8g
 quarkus.devservices.enabled=false
+quarkus.kubernetes.deployment-target=knative
+quarkus.kubernetes.deploy=true
+quarkus.container-image.group=dev.local
+kogito.logger.always-include=true
